set Entity instead of Object
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C42380

--- a/Vanrise/Code/Vanrise.Common.Web/Common/Directives/ActionAudit/Templates/ActionAuditGridTemplate.html
+++ b/Vanrise/Code/Vanrise.Common.Web/Common/Directives/ActionAudit/Templates/ActionAuditGridTemplate.html
@@ -11,7 +11,7 @@
     <vr-datagridcolumn headertext="'Module'" field="'ModuleName'" type="'Text'" fixedwidth="150"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Entity'" field="'EntityName'" type="'Text'" fixedwidth="150"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Action'" field="'ActionName'" type="'Text'" fixedwidth="150"></vr-datagridcolumn>
-    <vr-datagridcolumn headertext="'Object Id'" field="'Entity.ObjectId'" type="'Text'" fixedwidth="70" initiallyhidden="true"></vr-datagridcolumn>
-    <vr-datagridcolumn headertext="'Object Name'" field="'Entity.ObjectName'" type="'Text'" widthfactor="1"></vr-datagridcolumn>
+    <vr-datagridcolumn headertext="'Entity Id'" field="'Entity.ObjectId'" type="'Text'" fixedwidth="70" initiallyhidden="true"></vr-datagridcolumn>
+    <vr-datagridcolumn headertext="'Entity Name'" field="'Entity.ObjectName'" type="'Text'" widthfactor="1"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Notes'" field="'Entity.ActionDescription'" type="'Text'" widthfactor="2"></vr-datagridcolumn>
 </vr-datagrid>
