--- a/Vanrise/Code/Vanrise.Common.Web/Common/Directives/ActionAudit/Templates/ActionAuditSearch.html
+++ b/Vanrise/Code/Vanrise.Common.Web/Common/Directives/ActionAudit/Templates/ActionAuditSearch.html
@@ -15,10 +15,10 @@
             <vr-common-actionauditlkup-selector on-ready="scopeModel.onEntityDirectiveReady" customlabel="Entity" ismultipleselection normal-col-num="2"></vr-common-actionauditlkup-selector>
             <vr-common-actionauditlkup-selector on-ready="scopeModel.onActionDirectiveReady" customlabel="Action" ismultipleselection normal-col-num="2"></vr-common-actionauditlkup-selector>
             <vr-columns width="normal">
-                <vr-textbox label="Object Id" value="scopeModel.objectId"></vr-textbox>
+                <vr-textbox label="Entity Id" value="scopeModel.objectId"></vr-textbox>
             </vr-columns>
             <vr-columns width="normal">
-                <vr-textbox label="Object Name" value="scopeModel.objectName"></vr-textbox>
+                <vr-textbox label="Entity Name" value="scopeModel.objectName"></vr-textbox>
             </vr-columns>
             <vr-columns width="normal">
                 <vr-numeric label="Top" value="scopeModel.top" isrequired="true" minvalue="1"></vr-numeric>
