--- a/Vanrise/Code/Vanrise.Common.Web/Common/Directives/GeneralSettings/Templates/UITemplateSettings.html
+++ b/Vanrise/Code/Vanrise.Common.Web/Common/Directives/GeneralSettings/Templates/UITemplateSettings.html
@@ -8,5 +8,8 @@
             <vr-textbox value="scopeModel.longPrecision" label="Rate Precision" type="number" minvalue="0" decimalprecision="0" isrequired="true"></vr-textbox>
         </vr-columns>
         <vr-common-pagesize-selector normal-col-num="6" on-ready="scopeModel.onPageSelectorReady" isrequired="true" ></vr-common-pagesize-selector>
+        <vr-columns width="1/2row">
+            <vr-textbox value="scopeModel.maxSearchRecordCount" label="Max Search Record Count" type="number" minvalue="1" decimalprecision="0" isrequired="true"></vr-textbox>
+        </vr-columns>
     </vr-row>
 </vr-tab>
