added CurrencySQLColumnName to Analytic Dimension
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C42415

--- a/Vanrise/Code/Vanrise.Analytic.Web/Analytic/Directives/AnalyticItemConfig/Templates/DimensionEditorTemplate.html
+++ b/Vanrise/Code/Vanrise.Analytic.Web/Analytic/Directives/AnalyticItemConfig/Templates/DimensionEditorTemplate.html
@@ -20,6 +20,9 @@
         <vr-analytic-dimension-selector on-ready="scopeModel.onParentDimensionSelectorDirectiveReady" normal-col-num="4" customlabel="Parent Dimensions" ismultipleselection></vr-analytic-dimension-selector>
 
         <vr-analytic-dimension-selector on-ready="scopeModel.onRequiredParentDimensionSelectorDirectiveReady" normal-col-num="4" customlabel="Required Parent Dimension"></vr-analytic-dimension-selector>
+        <vr-columns colnum="4">
+            <vr-textbox value="scopeModel.currencySQLColumnName" label="Currency SQL Column Name"></vr-textbox>
+        </vr-columns>
     </vr-row>
 
     <vr-row>
