--- a/Retail/Code/Retail.BusinessEntity.Web/Retail_BusinessEntity/Directives/Product/ProductDefinition/MainExtensions/ExtendedSettings/Templates/PostPaidDefinitionSettingsTemplate.html
+++ b/Retail/Code/Retail.BusinessEntity.Web/Retail_BusinessEntity/Directives/Product/ProductDefinition/MainExtensions/ExtendedSettings/Templates/PostPaidDefinitionSettingsTemplate.html
@@ -1,1 +1,3 @@
-﻿
+﻿<vr-columns width="1/2row">
+    <vr-switch label="Optional Credit Limit" value="scopeModel.optionalCreditLimit"></vr-switch>
+</vr-columns>
