--- a/NetworkProvisioning/Code/NP.IVSwitch.Web/NP_IVSwitch/Directives/Route/Templates/RouteGridTemplate.html
+++ b/NetworkProvisioning/Code/NP.IVSwitch.Web/NP_IVSwitch/Directives/Route/Templates/RouteGridTemplate.html
@@ -17,6 +17,10 @@
                 <vr-datagridcolumn headertext="'Route'" field="'Entity.Description'"></vr-datagridcolumn>
                 <vr-datagridcolumn headertext="'Host'" field="'Entity.Host'"></vr-datagridcolumn>
                 <vr-datagridcolumn headertext="'State'" field="'CurrentStateDescription'"></vr-datagridcolumn>
+                <vr-datagridexpandablerow>
+                    <vr-directivetabs tabitems="dataItem.drillDownExtensionObject.drillDownDirectiveTabs"></vr-directivetabs>
+                </vr-datagridexpandablerow>
+
             </vr-datagrid>
         </vr-columns>
     </vr-row>
