--- a/NetworkProvisioning/Code/NP.IVSwitch.Web/NP_IVSwitch/Directives/TranslationRule/Templates/TranslationRuleGridTemplate.html
+++ b/NetworkProvisioning/Code/NP.IVSwitch.Web/NP_IVSwitch/Directives/TranslationRule/Templates/TranslationRuleGridTemplate.html
@@ -9,6 +9,9 @@
     <vr-datagridcolumn headertext="'DNIS Pattern'" field="'Entity.DNISPattern'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'CLI Pattern'" field="'Entity.CLIPattern'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Creation Date'" field="'Entity.CreationDate'"  type="'Datetime'"></vr-datagridcolumn>
+    <vr-datagridexpandablerow>
+        <vr-directivetabs tabitems="dataItem.drillDownExtensionObject.drillDownDirectiveTabs"></vr-directivetabs>
+    </vr-datagridexpandablerow>
 
 
 </vr-datagrid>
