--- a/Vanrise/Code/Vanrise.Rules.Web/VR_Rules/Directives/NormalizationRule/Templates/NormalizeNumberSettingsDirectiveTemplate.html
+++ b/Vanrise/Code/Vanrise.Rules.Web/VR_Rules/Directives/NormalizationRule/Templates/NormalizeNumberSettingsDirectiveTemplate.html
@@ -1,30 +1,15 @@
 ﻿<div>
     <vr-row>
-        <vr-columns width="1/3row">
-            <vr-select label="Action Type"
-                       on-ready="ctrl.templatesSelectorReady"
-                       datasource="ctrl.templates"
-                       selectedvalues="ctrl.selectedActionTemplate"
-                       onselectionchanged="ctrl.onActionTemplateChanged"
-                       datavaluefield="ExtensionConfigurationId"
-                       datatextfield="Title"
-                       entityname="Action Type"
-                       hideremoveicon>
-            </vr-select>
-        </vr-columns>
-
-        <vr-columns width="normal">
-            <div style="position: absolute; top: 25px;" vr-disabled="ctrl.disableAddButton">
-                <vr-button type="Add" data-onclick="ctrl.addFilter" standalone></vr-button>
-            </div>
-        </vr-columns>
+        <vr-columns width="2/3row" >
+            <vr-toolbox datasource="ctrl.templates" datatextfield="Title" datavaluefield="ExtensionConfigurationId" groupname="{{ctrl.dragdropGroupCorrelation.getGroupName()}}"></vr-toolbox>
+        </vr-columns>    
     </vr-row>
 
     <vr-row>
         <vr-columns width="fullrow" vr-loader="ctrl.isLoadingDirective">
             <vr-validator validate="ctrl.isValid()">
                 <vr-datagrid datasource="ctrl.datasource"
-                             on-ready="ctrl.onGridReady" enabledraggablerow="true" ondeleterow="ctrl.removeFilter" hidegridmenu enabledraggablerow>
+                             on-ready="ctrl.onGridReady" ondeleterow="ctrl.removeFilter" hidegridmenu enabledraggablerow="true" dragdropsetting="ctrl.dragdropSetting">
                     <vr-datagridcolumn headertext="'Filter Type'" field="'name'" widthfactor="2"></vr-datagridcolumn>
                     <vr-datagridcolumn widthfactor="8"><vr-directivewrapper directive="dataItem.editor" on-ready="dataItem.onDirectiveReady"></vr-directivewrapper></vr-datagridcolumn>
                 </vr-datagrid>
