--- a/Vanrise/Code/Vanrise.Rules.Web/VR_Rules/Directives/PricingRule/Templates/PricingRuleRateTypeSettings.html
+++ b/Vanrise/Code/Vanrise.Rules.Web/VR_Rules/Directives/PricingRule/Templates/PricingRuleRateTypeSettings.html
@@ -1,19 +1,14 @@
 ﻿
-<vr-row>
-    <vr-columns width="1/4row">
-        <vr-select datatextfield="Title" datavaluefield="ExtensionConfigurationId"
-                   label="Filter Type" datasource="ctrl.rateTypeTemplates" selectedvalues="ctrl.selectedTemplate" onselectionchanged="ctrl.onActionTemplateChanged">
-        </vr-select>
-    </vr-columns>
-    <vr-columns width="normal" withemptyline>
-        <vr-button type="Add" data-onclick="ctrl.addFilter" standalone vr-disabled="ctrl.disableAddButton"></vr-button>
+<vr-row>   
+    <vr-columns width="2/3row" >
+        <vr-toolbox datasource="ctrl.rateTypeTemplates" medium datatextfield="Title" datavaluefield="ExtensionConfigurationId" groupname="{{ctrl.dragdropGroupCorrelation.getGroupName()}}"></vr-toolbox>
     </vr-columns>
 </vr-row>
 <vr-row>
     <vr-columns width="fullrow">
         <vr-validator validate="ctrl.isValid()">
             <vr-datagrid datasource="ctrl.datasource"
-                         on-ready="onGridReady" enabledraggablerow="true" ondeleterow="ctrl.removeFilter" hidegridmenu norowhighlightonclick="'true'">
+                         on-ready="onGridReady" enabledraggablerow="true" ondeleterow="ctrl.removeFilter" hidegridmenu norowhighlightonclick="'true'" dragdropsetting="ctrl.dragdropSetting">
                 <vr-datagridcolumn headertext="'Filter Type'" field="'name'" widthfactor="5">
                 </vr-datagridcolumn>
                 <vr-datagridcolumn headertext="'Filter Settings'" widthfactor="15">
