--- a/TOneV2/Code/TOneV2/TOne.WhS.Routing.Web/WhS_Routing/Directives/Extensions/RouteRuleSettings/Order/Templates/RouteRuleOrderDirective.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Routing.Web/WhS_Routing/Directives/Extensions/RouteRuleSettings/Order/Templates/RouteRuleOrderDirective.html
@@ -1,27 +1,18 @@
 ﻿<vr-row>
-    <vr-columns width="1/3row">
-        <vr-select datatextfield="Title" datavaluefield="ExtensionConfigurationId" text="None"
-                   label="Order By" datasource="ctrl.optionOrderSettingsGroupTemplates" selectedvalues="ctrl.selectedOptionOrderSettingsGroupTemplate">
-        </vr-select>
-    </vr-columns>
-    <vr-columns width="normal">
-        <div style="position: absolute; top: 25px;">
-            <vr-button type="Add" vr-disabled="ctrl.selectedOptionOrderSettingsGroupTemplate == undefined" data-onclick="ctrl.addOptionOrderType" standalone></vr-button>
-        </div>
+    <vr-columns width="2/3row">
+        <vr-toolbox label="Order By" medium datasource="ctrl.optionOrderSettingsGroupTemplates" datatextfield="Title" datavaluefield="ExtensionConfigurationId" groupname="{{ctrl.dragdropGroupCorrelation.getGroupName()}}"></vr-toolbox>
     </vr-columns>
     <vr-columns width="1/3row">
         <vr-whs-routing-routerulesettings-ordertype-selector on-ready="scopeModel.onRouteRuleSettingsOrderTypeSelectorReady"
-                                                    selectedvalues="scopeModel.selectedRouteRuleSettingsOrderType"
-                                                    ng-show="ctrl.datasource.length > 1">
+                                                             selectedvalues="scopeModel.selectedRouteRuleSettingsOrderType"
+                                                             ng-show="ctrl.datasource.length > 1">
         </vr-whs-routing-routerulesettings-ordertype-selector>
     </vr-columns>
 </vr-row>
-
 <vr-row>
-
     <vr-columns width="fullrow" vr-loader="ctrl.isLoadingDirective">
         <vr-validator validate="ctrl.isValid()">
-            <vr-datagrid datasource="ctrl.datasource" on-ready="onGridReady" ondeleterow="ctrl.removeOption" enabledraggablerow="true" hidegridmenu >
+            <vr-datagrid datasource="ctrl.datasource" on-ready="onGridReady" ondeleterow="ctrl.removeOption" enabledraggablerow="true" dragdropsetting="ctrl.dragdropSetting" hidegridmenu>
                 <vr-datagridcolumn headertext="'Option Order'" field="'name'" widthfactor="5" disablesorting="true"></vr-datagridcolumn>
                 <vr-datagridcolumn headertext="'Percentage'" ng-show="scopeModel.showPercentage()" widthfactor="5" disablesorting="true">
                     <div>
