vr-toolbox layout size update
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C42439

--- a/TOneV2/Code/TOneV2/TOne.WhS.Routing.Web/WhS_Routing/Directives/Extensions/RouteRuleSettings/Filter/Templates/RouteRuleFilterDirective.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Routing.Web/WhS_Routing/Directives/Extensions/RouteRuleSettings/Filter/Templates/RouteRuleFilterDirective.html
@@ -1,6 +1,6 @@
 ﻿<div>
     <vr-row>
-         <vr-columns width="2/3row">
+         <vr-columns width="fullrow">
              <vr-toolbox label="Filter Type" medium datasource="ctrl.optionFilterSettingsGroupTemplates" datatextfield="Title" datavaluefield="ExtensionConfigurationId" groupname="{{ctrl.dragdropGroupCorrelation.getGroupName()}}"></vr-toolbox>
         </vr-columns>    
     </vr-row>
