vr-toolbox layout size update
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C42440

--- a/Vanrise/Code/Vanrise.Rules.Web/VR_Rules/Directives/PricingRule/Templates/PricingRuleRateTypeSettings.html
+++ b/Vanrise/Code/Vanrise.Rules.Web/VR_Rules/Directives/PricingRule/Templates/PricingRuleRateTypeSettings.html
@@ -1,6 +1,6 @@
 ﻿
 <vr-row>   
-    <vr-columns width="2/3row" >
+    <vr-columns width="fullrow" >
         <vr-toolbox datasource="ctrl.rateTypeTemplates" medium datatextfield="Title" datavaluefield="ExtensionConfigurationId" groupname="{{ctrl.dragdropGroupCorrelation.getGroupName()}}"></vr-toolbox>
     </vr-columns>
 </vr-row>
